# LumaxEngine

./: .gitignore  LumaxEngine.sln  plan16au.org
Wolfeinstein_clone/: CMakeCache.txt  CMakeLists.txt  ECS_desc.cpp  ECS_desc.hpp  LumaxEngine  LumaxEngine.vcxproj  LumaxEngine.vcxproj.filters  Makefile  Makefile2  TODO.txt  cmake_install.cmake  lumax.cpp  lumax.hpp  main.cpp  main.hpp  math.hpp  shader-error.txt
Wolfeinstein_clone/CL/: GeometryData.hpp  LightComponent.hpp  Movement.hpp
Wolfeinstein_clone/GL/: Door.cpp  Door.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Level.hpp  LevelWolf.cpp  LevelWolf.hpp  LevelWolf.tpp  LuaLevelLoader.hpp  LuaLevelLoader.tpp  MedKit.cpp  MedKit.hpp  Player.cpp  Player.hpp
Wolfeinstein_clone/PL/: ContactManifold.hpp  DynamicCollision.hpp  PhysicsPrimitives.cpp  PrimitiveCollision.hpp
Wolfeinstein_clone/RAL/: DirectInput.cpp  Keys.hpp  Log.cpp  Log.hpp  RenderingContextDX11.hpp  RenderingState.hpp  Window.cpp  Window.hpp  buildDesc.hpp  input.hpp
Wolfeinstein_clone/RL/: Camera.cpp  Camera.hpp  FullModel3D.hpp  IncludeGraph.txt  LookAtCamera.cpp  LookAtCamera.hpp  Material.hpp  Mesh3D.cpp  Mesh3D.hpp  Model2D.hpp  Model3D.cpp  Model3D.hpp  RenderComponent.hpp  RenderSystems.cpp  RenderSystems.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  ShaderPipeline.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  WaterFrameBuffer.cpp  WaterFrameBuffer.hpp  WaterTile.cpp  WaterTile.hpp
Wolfeinstein_clone/RML/: ResourceManager.cpp  ResourceManager.hpp
Wolfeinstein_clone/TL/: FBmTerrain.cpp  FBmTerrain.hpp  HeightMapTerrain.cpp  Map.cpp  (+7 more)
(+403 files in other folders)
